--- a/try/css/editor.css
+++ b/try/css/editor.css
@@ -1,16 +1,59 @@
+* {
+  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+  box-sizing: border-box;         /* Opera/IE 8+ */
+}
+
+.container {
+  height:100%;
+  width:50%;
+  padding-top:49px;
+}
+
+#editor_container {
+  position:absolute;
+  top:0;
+  left:0;
+}
+
 #editor {
+  position:relative;
+  min-width:400px;
+  width: 100%;
+  height: 100%;
+  border-right:1px solid #DDD;
   font:14px "inconsolata";
   line-height:18px;
-  width: 50%;
-  height: 95%;
-  border-right:1px solid #DDD;
+}
+
+#console_container {
+  position:absolute;
+  top:0;
+  left:50%;
 }
 
 #console {
-  margin-left:50%;
-  height: 95%;
+  min-width:400px;  
   padding:0px 0px;
+  height:100%;
   overflow:scroll;
+}
+
+#error_container {
+  display:none;
+  height:50%;
+  width:50%;
+  position:absolute;
+  top:47px;
+  left:50%;
+  padding-top:2px;
+  background:#FFF;
+  z-index:10;
+  box-shadow: 0px 5px 5px #BBB;
+}
+
+#error {
+  z-index:10;
 }
 
 .ace_gutter {
@@ -28,7 +71,11 @@
   color:#388853;
 }
 
-#console pre {
+#console emph.print {
+  color:#666;
+}
+
+#console pre, #error pre {
   font:14px "inconsolata";
   line-height:18px;
   margin:0px;
