--- a/try/css/layout.css
+++ b/try/css/layout.css
@@ -20,8 +20,24 @@ body {
 }
 
 header {
+  min-width:800px;
+  position:absolute;
+  height:47px;
+  width:100%;
+  z-index:2;
   padding:10px;
-  border-bottom:1px solid #DDD;
+  background:#FFF;
+  -webkit-box-shadow: 0px 0px 10px 0px #666;
+  -moz-box-shadow: 0px 0px 10px 0px #666;
+  box-shadow: 0px 0px 10px 0px #666;
+}
+
+section {
+  min-width:800px;
+  position:absolute;
+  height:100%;
+  width:100%;
+  z-index:1;
 }
 
 header .title {
