--- a/try/css/editor.css
+++ b/try/css/editor.css
@@ -84,3 +84,21 @@
   padding:0px 5px;
   margin-bottom:2px;
 }
+
+.ace_error {
+  background:none;
+}
+
+.ace_error:before {
+  content:"●";
+  color:#B35732;
+  padding-right:5px;
+  font:14px "inconsolata";
+  background:none;
+}
+
+.ace_marker-layer .warning{
+  position: absolute;
+  z-index: 4;
+  border-bottom:2px solid #444;
+}
