--- a/try/css/editor.css
+++ b/try/css/editor.css
@@ -100,5 +100,5 @@
 .ace_marker-layer .warning{
   position: absolute;
   z-index: 4;
-  border-bottom:2px solid #444;
+  border-bottom:2px solid #DE7164;
 }
