--- a/try/css/layout.css
+++ b/try/css/layout.css
@@ -22,14 +22,14 @@ body {
 header {
   min-width:800px;
   position:absolute;
-  height:47px;
-  padding:10px;
+  height:48px;
+  padding:12px;
   width:100%;
   z-index:2;
   background:#FFF;
-  -webkit-box-shadow: 0px 0px 10px 0px #666;
-  -moz-box-shadow: 0px 0px 10px 0px #666;
-  box-shadow: 0px 0px 10px 0px #666;
+  -webkit-box-shadow: 0px 0px 3px 0px #666;
+  -moz-box-shadow: 0px 0px 3px 0px #666;
+  box-shadow: 0px 0px 3px 0px #666;
 }
 
 section {
@@ -52,45 +52,54 @@ header h3 {
 a.icon {
   float:left;
   display:block;
-  height:28px;
-  width:28px;
-  padding:2px 6px 6px 6px;
+  height:26px;
+  width:26px;
+  padding:0px 2px 6px 2px;
   text-align:center;
   font: 13px "proxima-nova";
-  border-radius:4px;
+  border-radius:2px;
   margin-left:10px;
   line-height:22px;
-  color: #fff;
-  background:#555;
+  color: #555;
+  background:#FFF;
   text-decoration: none;
+  border:1px solid #AAA;
   z-index:0;
+  -webkit-box-shadow: 0px 1px 1px rgba(50, 50, 50, 0.17);
+  -moz-box-shadow:    0px 1px 1px rgba(50, 50, 50, 0.17);
+  box-shadow:         0px 1px 1px rgba(50, 50, 50, 0.17);
+}
+
+a.icon:hover {
+  -moz-box-shadow: inset 0 2px 2px -1px rgba(50, 50, 50, 0.12);
+  -webkit-box-shadow: inset 0 2px 2px -1px rgba(50, 50, 50, 0.12);
+  box-shadow: inset 0 2px 2px -1px rgba(50, 50, 50, 0.12);
+  border-color:#888;
 }
 
 a.icon img {
-  height:13px;
-  width:13px;
+  height:12px;
+  width:12px;
+  opacity:0.65;
+}
+
+a.icon:hover img {
+  opacity:0.85;
 }
 
 header a.icon#run {
-  padding-top:2px;
-  padding-left:6px;
-  background:#AF4921;
+  padding-top:0px;
 }
 
 header a.icon#run:hover {
-  background:#B33300;
 }
 
 header a.icon#run img {
-  height:16px;
-  width:16px;
 }
 header a.icon#store {
-  background:#4271AE;
 }
 
 header a.icon#store:hover {
-  background:#2763AD;
 }
 
 #files {
