--- a/try/css/dropkick.css
+++ b/try/css/dropkick.css
@@ -35,17 +35,17 @@
   position: relative;
   background:#FFF;
   border-radius:2px;
-  border:1px solid #AAA;
+  border:1px solid #CCC;
   -webkit-box-shadow: 0px 1px 1px rgba(50, 50, 50, 0.12);
   -moz-box-shadow:    0px 1px 1px rgba(50, 50, 50, 0.12);
   box-shadow:         0px 1px 1px rgba(50, 50, 50, 0.12);
-  zoom: 1;
 }
   .dk_toggle:hover {
-    border-color:#888;
+    border-color:#AAA;
     -moz-box-shadow: inset 0 2px 2px -1px rgba(50, 50, 50, 0.12);
     -webkit-box-shadow: inset 0 2px 2px -1px rgba(50, 50, 50, 0.12);
     box-shadow: inset 0 2px 2px -1px rgba(50, 50, 50, 0.12);
+    background:#FFF;
   }
   .dk_label {
     position:relative;
@@ -74,7 +74,7 @@
   }
 
   .dk_open .dk_toggle {
-    border-color:#888;
+    border-color:#AAA;
     -moz-box-shadow: inset 0 2px 2px -1px rgba(50, 50, 50, 0.12);
     -webkit-box-shadow: inset 0 2px 2px -1px rgba(50, 50, 50, 0.12);
     box-shadow: inset 0 2px 2px -1px rgba(50, 50, 50, 0.12);
@@ -95,7 +95,7 @@
   width: 100%;
   background:#FFF;
   border-radius:2px;
-  border:1px solid #777;
+  border:1px solid #AAA;
   border-top:none;
   border-top-left-radius:0px;
   border-top-right-radius:0px;
