--- a/try/css/layout.css
+++ b/try/css/layout.css
@@ -63,7 +63,7 @@ a.icon {
   color: #555;
   background:#FFF;
   text-decoration: none;
-  border:1px solid #AAA;
+  border:1px solid #BBB;
   z-index:0;
   -webkit-box-shadow: 0px 1px 1px rgba(50, 50, 50, 0.17);
   -moz-box-shadow:    0px 1px 1px rgba(50, 50, 50, 0.17);
@@ -74,14 +74,14 @@ a.icon:hover {
   -moz-box-shadow: inset 0 2px 2px -1px rgba(50, 50, 50, 0.12);
   -webkit-box-shadow: inset 0 2px 2px -1px rgba(50, 50, 50, 0.12);
   box-shadow: inset 0 2px 2px -1px rgba(50, 50, 50, 0.12);
-  border-color:#888;
+  border-color:#AAA;
 }
 
 a.icon span {
   display:block;
   height:100%;
   width:100%;
-  opacity:0.65;
+  opacity:0.6;
 }
 
 a.icon:hover span {
